--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,11 @@
 <nav>
   <ul>
     <% if (!isUserLoggedIn) { %>
+      <button>artist</button>
+      <button>contractor</button>
       <li> <a href="/signup"> Sign Up </a> </li>
       <li> <a href="/login"> Log In </a> </li>
-      <li><a href="https://api.instagram.com/oauth/authorize/?client_id=CLIENT-ID&redirect_uri=REDIRECT-URI&response_type=code">instagram login</a></li>
+      <li><a href="https://api.instagram.com/oauth/authorize/?client_id=CLIENT-ID&redirect_uri=REDIRECT-URI&response_type=token">instagram login</a></li>
 
     <% } else { %>
       <li> <a href="/edit-profile"> Edit Profile </a> </li>
