--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -9,7 +9,7 @@ background-color: #04A3ED;
 width:100%;
 height: auto;
 padding: 0 10px;
-position: fixed;
+position: relative;
 margin: 0px;
 z-index: 99999;
 }
@@ -63,16 +63,31 @@ video::-webkit-media-controls {
 }
 .video-overlay {
     position: absolute;
-    background-color: rgba (0, 121, 191, 1);
-    z-index: 99;
-    top: 0px;
+    background-image: url(../images/grey.png);
+    background-repeat: repeat;
+    opacity: 0.2;
+    top: 0;
     right: 0;
     bottom: 0;
     left: 0;
+    width: 100%;
+    height: 100%;
 }
-
-
-
+.text {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+.text h1 {
+    z-index: 20;
+    opacity: 1;
+    margin-top: 200px;
+    color: #fff;
+}
 .video-overlay2 {
     position: absolute;
     top: 0px;
@@ -83,4 +98,64 @@ video::-webkit-media-controls {
     opacity: 0;
     transition: opacity 0.3s ease;
     z-index: 999;
+}
+
+/* --- sign up ---- */
+.container {
+    position: absolute;
+    margin-top: 70px;
+}
+.colorgraph {
+  height: 5px;
+  border-top: 0;
+  background: #c4e17f;
+  border-radius: 5px;
+}
+/* --- check button --- */
+
+.onoffswitch {
+    position: relative; width: 180px;
+    -webkit-user-select:none; -moz-user-select:none; -ms-user-select: none;
+}
+.onoffswitch-checkbox {
+    display: none;
+}
+.onoffswitch-label {
+    display: block; overflow: hidden; cursor: pointer;
+    border: 2px solid #C4E17F; border-radius: 20px;
+}
+.onoffswitch-inner {
+    display: block; width: 200%; margin-left: -100%;
+    -moz-transition: margin 0.3s ease-in 0s; -webkit-transition: margin 0.3s ease-in 0s;
+    -o-transition: margin 0.3s ease-in 0s; transition: margin 0.3s ease-in 0s;
+}
+.onoffswitch-inner:before, .onoffswitch-inner:after {
+    display: block; float: left; width: 50%; height: 30px; padding: 0; line-height: 30px;
+    font-size: 14px; color: white; font-family: Trebuchet, Arial, sans-serif; font-weight: bold;
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+.onoffswitch-inner:before {
+    content: "Artist";
+    padding-left: 10px;
+    background-color: #04A3ED; color: #fff;
+}
+.onoffswitch-inner:after {
+    content: "Looking for One";
+    padding-right: 10px;
+    background-color: #4EA64E; color: #fff;
+    text-align: right;
+}
+.onoffswitch-switch {
+    display: block; width: 18px; margin: 6px;
+    background: #FFFFFF;
+    border: 2px solid #C4E17F; border-radius: 20px;
+    position: absolute; top: 0; bottom: 0; right: 150px;
+    -moz-transition: all 0.3s ease-in 0s; -webkit-transition: all 0.3s ease-in 0s;
+    -o-transition: all 0.3s ease-in 0s; transition: all 0.3s ease-in 0s;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
+    margin-left: 0;
+}
+.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
+    right: 0px;
 }
