--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,3 +1,5 @@
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css">
 <body>
     <!--Video Section-->
     <div class="video-section">
@@ -8,7 +10,25 @@
             <div class="text">
                 <h1>Welcome to Talentero</h1>
             </div>
-
         </div>
+    </div>
+    <div class="container">
+    <div class="row">
+    	<div class="col-lg-3">
+    				<div class="cuadro_intro_hover " style="background-color:#cccccc;">
+						<p style="text-align:center; margin-top:20px;">
+							<img src="http://trovacamporella.com/img/trovacamporella-fiat500.png" class="img-responsive" alt="">
+						</p>
+						<div class="caption">
+							<div class="blur"></div>
+							<div class="caption-text">
+								<h3 style="border-top:2px solid white; border-bottom:2px solid white; padding:10px;">THIS IS H3</h3>
+								<p>Loren ipsum dolor si amet ipsum dolor si amet ipsum dolor...</p>
+								<a class=" btn btn-default" href="http://trovacamporella.com"><span class="glyphicon glyphicon-plus"> INFO</span></a>
+							</div>
+						</div>
+					</div>
+	    </div>
+    </div>
     </div>
 </body>
