--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -81,10 +81,11 @@ video::-webkit-media-controls {
     left: 0;
     width: 100%;
     height: 100%;
-}
-.text h1 {
+    text-align: center;
     z-index: 20;
     opacity: 1;
+}
+.text h1 {
     margin-top: 200px;
     color: #fff;
 }
