--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -1,30 +1,31 @@
-<h2> Log In </h2>
-
 <% if (errorMessage) { %>
   <p class="error-message">
     <%= errorMessage %>
   </p>
 <% } %>
 
-<form action="/login" method="post">
-  <div>
-    <label for="email-input"> Email </label>
-    <input type="email" name="email" id="email-input"
-      placeholder="e.g., xena@warrior.company">
-  </div>
-
-  <div>
-    <label for="password-input"> Password </label>
-    <input type="password" name="password" id="password-input"
-      placeholder="e.g., ••••••••••••">
-  </div>
-
-  <button> Log In </button>
-</form>
-
-<p>
-  Don't have an account?
-  <a href="/signup">
-    Create an account.
-  </a>
-</p>
+<div class="container">
+<div class="row">
+    <div class="col-xs-12 col-sm-8 col-md-6 col-sm-offset-2 col-md-offset-3">
+    	<form role="form" action="/login" method="post" >
+			<h2>Welcome to Talentero <small>Login</small></h2>
+			<hr class="colorgraph">
+			<div class="form-group">
+				<input type="email" name="email" id="email-input" class="form-control input-lg" placeholder="Email Address" tabindex="4">
+			</div>
+			<div class="row">
+				<div class="col-xs-12 col-sm-6 col-md-6">
+					<div class="form-group">
+						<input type="password" name="password" id="password-input" class="form-control input-lg" placeholder="Password" tabindex="5">
+					</div>
+				</div>
+			</div>
+			<hr class="colorgraph">
+			<div class="row">
+				<div class="col-xs-12 col-md-6"><input type="submit" value="Login" class="btn btn-primary btn-block btn-lg" tabindex="7"></div>
+				<div class="col-xs-12 col-md-6"><a href="/signup" class="btn btn-success btn-block btn-lg">No account? - click here</a></div>
+			</div>
+		</form>
+	</div>
+</div>
+</div>
