--- a/public/stylesheets/style2.css
+++ b/public/stylesheets/style2.css
@@ -14,6 +14,15 @@ margin: 0px;
 z-index: 99999;
 }
 
+.login {
+    color: #fff;
+    font-weight: bold;
+    font-size: 17px;
+    margin-top: 10px;
+    margin-right: 20px;
+    display: inline-block;
+}
+
 .menu  .navbar-nav > .active > a {
 background-color : #04A3ED;
 color: white;
@@ -159,4 +168,66 @@ video::-webkit-media-controls {
 }
 .onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
     right: 0px;
+}
+
+/* --- CONTENT ----*/
+
+a.list-group-item {
+    height:auto;
+    min-height:220px;
+}
+a.list-group-item.active small {
+    color:#fff;
+}
+.stars {
+    margin:20px auto 1px;
+}
+.container {
+    clear: both;
+}
+
+/* --- profile --- */
+
+/****** Searchable container */
+
+.title{
+ margin-left:20px
+}
+
+.fa-user{
+ font-size:80px
+}
+
+.searchable-container{
+    margin-top:40px;
+}
+
+.glyphicon-lg{
+    font-size:4em
+}
+.info-block{
+    border-right:5px solid #E6E6E6;margin-bottom:25px
+}
+.info-block .square-box {
+    width:120px;
+    min-height:120px;
+    margin-right:22px;
+    text-align:center!important;
+    background-color:#676767;
+    padding:20px 0
+}
+.info-block:hover .info-block.block-info {
+    border-color:#20819e
+}
+
+.info-block.block-info .square-box {
+    background-color:#5bc0de;
+    color:#FFF
+}
+
+
+/*   */
+
+body{margin-top:20px;
+background:#eee;
 }
