--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -13,6 +13,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel='stylesheet' href='/stylesheets/style2.css'/>
     <link rel='stylesheet' href='/stylesheets/content.css'/>
+
   </head>
   <body>
     <header>
@@ -21,6 +22,7 @@
             <div class="container-fluid">
     		    <div class="navbar-header">
     			    <a href="/">Talentero</a>
+                    <img class="logo" src="/images/talentero-logo.png" alt="talentero-logo">
     		    </div>
     		    <div>
     			    <ul class="nav navbar-nav navbar-right">
@@ -40,7 +42,6 @@
     <%- body -%>
 
     <footer>
-      <p></p>
     </footer>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
