--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,18 +6,19 @@
         <video id="video-elem" preload="auto" autoplay="true" loop="loop" poster="/images/talenteroGIF.gif">
             <source src="/images/talentero.mp4" type="video/mp4">
         </video>
-        <div class="video-overlay">
-            <div class="text">
+        <div class="video-overlay"></div>
+        <div class="overlay-for-text">
                 <h1>Welcome to Talentero</h1>
-            </div>
+                <h2>Find your Artist here</h2>
         </div>
     </div>
+    <!--Content-->
     <div class="container">
         <div class="row">
     		<div class="well">
-            <h1 class="text-center">Vote for your favorite Artist</h1>
+            <h1 class="text-center">Top voted users</h1>
             <div class="list-group">
-              <a href="#" class="list-group-item active">
+              <a href="/login" class="list-group-item active">
                     <div class="media col-md-3">
                         <figure class="pull-left">
                             <img class="media-object img-rounded img-responsive"  src="http://placehold.it/350x250" alt="placehold.it/350x250" >
