--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -16,7 +16,7 @@
                 <a href="/users/<%=currentUserInfo._id%>/edit"><i class="fa fa-certificate"></i> Edit Profile</a>
             </li>
 
-            <li><a href="/user/:id/delete"> <i class="fa fa-trash-o"></i> Delete Profile</a></li>
+            <li><a href="/users/<%=currentUserInfo._id%>/delete"> <i class="fa fa-trash-o"></i> Delete Profile</a></li>
         </ul><!-- /.nav -->
         <h5 class="nav-email-subtitle">More</h5>
         <ul class="nav nav-pills nav-stacked nav-email mb-20 rounded shadow">
