--- a/views/auth/profile.ejs
+++ b/views/auth/profile.ejs
@@ -27,28 +27,22 @@
             </li>
             <li>
                 <a href="#">
-                    <i class="fa fa-folder-open"></i> Upload Pictures
-                </a>
-            </li>
-            <li>
-                <a href="#">
                     <i class="fa fa-folder-open"></i> See Profiles
                 </a>
             </li>
         </ul><!-- /.nav -->
-        <div class="col-lg-4">
+        <div class="col-sm-12 pics">
             <i class="fa fa-folder-open"></i> Upload Pictures
-            <form action="/profile/upload" method="post" enctype="multipart/form-data">
-                <input type="text" name="name">
-                <input type="file" name="file">
-                <input type="submit" value="Save">
+            <form class="pic-form" action="/profile/upload" method="post" enctype="multipart/form-data">
+                <input type="text" name="name" placeholder="picture name">
+                <input class="choose-file" type="file" name="file">
+                <input class="pic-input-button" type="submit" value="Save">
             </form>
-        <section>
-            <% pictures.forEach(function(picture) { %>
-                <h3><%= picture.name %></h3>
-                <img src="<%= picture.pic_path %>" alt="<%= picture.pic_name %>" />
-            <% })%>
-        </section>
+            <section class="user-pics">
+                <% pictures.forEach(function(picture) { %>
+                    <img src="<%= picture.pic_path %>" alt="<%= picture.pic_name %>" />
+                <% })%>
+            </section>
         </div>
     </div>
 <!-- right body -->
