--- a/views/layouts/main-layout.ejs
+++ b/views/layouts/main-layout.ejs
@@ -13,6 +13,7 @@
     <link rel="icon" href="/images/favicon.ico" type="image/x-icon">
     <link rel='stylesheet' href='/stylesheets/style2.css'/>
     <link rel='stylesheet' href='/stylesheets/content.css'/>
+    <link rel='stylesheet' href='/stylesheets/users.css'/>
 
   </head>
   <body>
