--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,88 +13,80 @@
         </div>
     </div>
     <!--Content-->
-    <div class="container">
-        <div class="row">
-    		<div class="well">
-            <h1 class="text-center">Top voted users</h1>
-            <div class="list-group">
-              <a href="/login" class="list-group-item active">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive"  src="http://placehold.it/350x250" alt="placehold.it/350x250" >
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> List group heading </h4>
-                        <p class="list-group-item-text"> Qui diam libris ei, vidisse incorrupte at mel. His euismod salutandi dissentiunt eu. Habeo offendit ea mea. Nostro blandit sea ea, viris timeam molestiae an has. At nisl platonem eum.
-                            Vel et nonumy gubergren, ad has tota facilis probatus. Ea legere legimus tibique cum, sale tantas vim ea, eu vivendo expetendis vim. Voluptua vituperatoribus et mel, ius no elitr deserunt mediocrem. Mea facilisi torquatos ad.
-                        </p>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <h2> 14240 <small> votes </small></h2>
-                        <button type="button" class="btn btn-default btn-lg btn-block"> Vote Now! </button>
-                        <div class="stars">
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </div>
-                        <p> Average 4.5 <small> / </small> 5 </p>
-                    </div>
-              </a>
-              <a href="#" class="list-group-item">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x250" alt="placehold.it/350x250" >
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> List group heading </h4>
-                        <p class="list-group-item-text"> Eu eum corpora torquatos, ne postea constituto mea, quo tale lorem facer no. Ut sed odio appetere partiendo, quo meliore salutandi ex. Vix an sanctus vivendo, sed vocibus accumsan petentium ea.
-                            Sed integre saperet at, no nec debet erant, quo dico incorrupte comprehensam ut. Et minimum consulatu ius, an dolores iracundia est, oportere vituperata interpretaris sea an. Sed id error quando indoctum, mel suas saperet at.
-                        </p>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <h2> 12424 <small> votes </small></h2>
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Vote Now!</button>
-                        <div class="stars">
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </div>
-                        <p> Average 3.9 <small> / </small> 5 </p>
-                    </div>
-              </a>
-              <a href="#" class="list-group-item">
-                    <div class="media col-md-3">
-                        <figure class="pull-left">
-                            <img class="media-object img-rounded img-responsive" src="http://placehold.it/350x250" alt="placehold.it/350x250">
-                        </figure>
-                    </div>
-                    <div class="col-md-6">
-                        <h4 class="list-group-item-heading"> List group heading </h4>
-                        <p class="list-group-item-text"> Ut mea viris eripuit theophrastus, cu ponderum accusata consequuntur cum. Suas quaestio cotidieque pro ea. Nam nihil persecuti philosophia id, nam quot populo ea.
-                            Falli urbanitas ei pri, eu est enim volumus, mei no volutpat periculis. Est errem iudicabit cu. At usu vocibus officiis, ad ius eros tibique appellantur.
-                        </p>
-                    </div>
-                    <div class="col-md-3 text-center">
-                        <h2> 13540 <small> votes </small></h2>
-                        <button type="button" class="btn btn-primary btn-lg btn-block">Vote Now!</button>
-                        <div class="stars">
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star"></span>
-                            <span class="glyphicon glyphicon-star-empty"></span>
-                        </div>
-                        <p> Average 4.1 <small> / </small> 5 </p>
-                    </div>
-              </a>
-            </div>
-            </div>
-    	</div>
+<section>
+<div class="padding80 bgcolor3" id="about">
+<div class= "container">
+    <div class= "row">
+        <div class="col-md-6">
+            <div class="textbox-component">
+        		<img src="https://s-media-cache-ak0.pinimg.com/originals/84/0b/4a/840b4ae249dafa3f0179a0f21f37100e.png" style=" max-height: 350px;" alt=" " class="img-responsive pull-right" >
+        	</div>
+        </div>
+        <div class="col-md-6">
+        <div class="divider50"></div>
+            <div class="textbox-component">
+            <h2>At Talentero</h2>
+                    <p>Fusce semper, nibh eu sollicitudin imperdiet, dolor magna vestibulum mi,
+        				vel tincidunt augue ipsum nec erat. Vestibulum congue leo elementum
+        				ullamcorper commodo. Class aptent taciti sociosqu ad litora torquent
+        				per conubia nostra, per inceptos himenaeos.</p>
+                    <hr>
+        		<button type="button" class="btn btn-warning btn-md">Medium</button>
+        	</div>
+        </div>
     </div>
+</div>
+</div>
+</section>
+
+<section>
+<div class="padding80 bgcolor2" id="about">
+<div class= "container">
+    <div class= "row">
+        <div class="col-md-6">
+    	<div class="divider50"></div>
+    	    <div class="textbox-component">
+            <h2>Why is Talentero for YOU</h2>
+              	<p>Fusce semper, nibh eu sollicitudin imperdiet, dolor magna vestibulum mi,
+					vel tincidunt augue ipsum nec erat. Vestibulum congue leo elementum
+					ullamcorper commodo. Class aptent taciti sociosqu ad litora torquent
+					per conubia nostra, per inceptos himenaeos.</p>
+                <hr>
+			    <button type="button" class="btn btn-warning btn-md">Medium</button>
+			</div>
+        </div>
+        <div class="col-md-6">
+            <div class="textbox-component">
+		        <img src="https://s-media-cache-ak0.pinimg.com/originals/84/0b/4a/840b4ae249dafa3f0179a0f21f37100e.png" style=" max-height: 350px;" alt=" " class="img-responsive">
+	        </div>
+        </div>
+    </div>
+</div>
+</div>
+</section>
+
+<section>
+<div class="padding80 bgcolor1" id="about">
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+		<div class="divider10"></div>
+			<h3>About us</h3>
+				<hr>
+				<p>Fusce semper, nibh eu sollicitudin imperdiet, dolor magna vestibulum mi,
+					vel tincidunt augue ipsum nec erat. Vestibulum congue leo elementum
+					ullamcorper commodo. Class aptent taciti sociosqu ad litora torquent
+					per conubia nostra, per inceptos himenaeos.</p>
+				<hr>
+			<button type="button" class="btn btn-warning btn-md">Medium</button>
+		</div>
+		<div class="col-md-6">
+			<img src="https://p.w3layouts.com/demos_new/28-01-2017/inspire-demo_Free/2047128721/web/images/11.jpg" alt=" " class="img-responsive">
+		</div>
+		<div class="clearfix"> </div>
+	</div>
+</div>
+</div>
+</section>
+
 </body>
