--- a/views/user/edit-profile.ejs
+++ b/views/user/edit-profile.ejs
@@ -1,22 +1,18 @@
 
 
-<form action="/users/<%= user._id %>/" method="POST">
-<input type="checkbox" name="check" checked="true" id="artist">artist?
-
-
-
+<!---<form action="/users/<%= user._id %>/" method="POST">
+<!-- <input type="checkbox" name="check" checked="true" id="artist">artist?
   <label for="name">Name</label>
-  <input type="text" id="" name="name" value="<%= user.name %>">
 
   <label for="email">email</label>
-  <input type="text" id="" name="email" value="<%= user.email %>">
+
   <label for="adress">adress</label>
   <input type="text" id="" name="adress" value="<%= user.adress %>">
   <label for="mobility">mobility</label>
   <input type="text" id="" name="mobility" value="mobility">
 <div id="profile">
-  <label for="profileAvatar">profileAvatar</label>
-  <input type="text" id="" name="profileAvatar" value="avatar">
+  <label for="profileAvatar">Profession</label>
+
   <label for="youtube">youtube URL</label>
   <input type="text" id="" name="youtube" value="youtube">
   <label for="tel">tel </label>
@@ -24,4 +20,82 @@
 </div>
 
   <button type="submit">Update</button>
-</form>
+</form> -->
+
+
+<div class="container">
+<div class="row">
+    <!-- left colum -->
+    <div class="col-sm-3">
+        <a href="mail-compose.html" type="submit" class="btn btn-danger btn-block btn-compose-email">Compose Email</a>
+        <ul class="nav nav-pills nav-stacked nav-email shadow mb-20">
+            <li>
+                <a href="/users/<%=currentUserInfo._id%>/edit"><i class="fa fa-certificate"></i> cambiar link Profile</a>
+            </li>
+        </ul><!-- /.nav -->
+    </div>
+<!-- right body -->
+    <div class="col-sm-9">
+        <!-- resume header -->
+        <div class="panel panel-default">
+               <div class="panel-heading resume-heading">
+                  <div class="row">
+                     <div class="col-lg-12">
+
+                        <div class="col-xs-12 col-sm-8">
+                            <form action="/users/<%= user._id %>/" method="POST">
+                               <ul class="list-group">
+                                   <li class="list-group-item"><input type="text" id="" name="name" value="<%= user.name %>">
+                                  <li class="list-group-item"><input type="text" id="" name="profileAvatar" value=""></li>
+                                  <li class="list-group-item"><input type="text" id="" name="youtube" value="youtube"></li>
+                                  <li class="list-group-item"><i class="glyphicon glyphicon-user"></i>      Member since <%= currentUserInfo.createdAt %></li>
+                                  <li class="list-group-item"><input type="text" id="" name="email" value="<%= user.email %>"></li>
+                                  <li class="list-group-item"><input type="checkbox" name="check" checked="true" id="artist">    Check if you are an Artist</li>
+                                  <li class="list-group-item"><button type="submit">Update</button></li>
+                               </ul>
+                            </form>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- main body experiences-->
+               <div class="bs-callout bs-callout-danger">
+                  <h4>Summary</h4>
+                  <p><li class="list-group-item"><input type="textfield" id="sumary-field" value="Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. Quis verear mel ne. Munere vituperata vis cu,
+                  te pri duis timeam scaevola, nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.">
+                 </li></p>
+                  <p>
+                     Odio recteque expetenda eum ea, cu atqui maiestatis cum. Te eum nibh laoreet, case nostrud nusquam an vis.
+                     Clita debitis apeirian et sit, integre iudicabit elaboraret duo ex. Nihil causae adipisci id eos.
+                  </p>
+               </div>
+               <div class="bs-callout bs-callout-danger">
+                  <h4>Interests</h4>
+                  <p>
+                      Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. Quis verear mel ne. Munere vituperata vis cu,
+                      te pri duis timeam scaevola, nam postea diceret ne.
+                  </p>
+               </div>
+               <div class="bs-callout bs-callout-danger">
+                  <h4>Prior Experiences</h4>
+                  <ul class="list-group">
+                     <a class="list-group-item inactive-link" href="#">
+                        <h4 class="list-group-item-heading">
+                           Model at Carl Lagerfeld
+                        </h4>
+                        <p class="list-group-item-text">
+                           Lorem ipsum dolor sit amet, ea vel prima adhuc, scripta liberavisse ea quo, te vel vidit mollis complectitur. Quis verear mel ne. Munere vituperata vis cu,
+                           te pri duis timeam scaevola, nam postea diceret ne. Cum ex quod aliquip mediocritatem, mei habemus persecuti mediocritatem ei.
+                        </p>
+                     </a>
+                     <a class="list-group-item inactive-link" href="#">
+                        <h4 class="list-group-item-heading">YouTube Channel</h4>
+                        <p></p>
+                     </a>
+                  </ul>
+               </div>
+            </div>
+         </div>
+    </div>
+</div>
+</div>
