--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -26,7 +26,7 @@
                 </a>
             </li>
             <li>
-                <a href="#">
+                <a href="/users/showusers">
                     <i class="fa fa-folder-open"></i> See Profiles
                 </a>
             </li>
@@ -54,7 +54,11 @@
                      <div class="col-lg-12">
                         <div class="col-xs-12 col-sm-4">
                            <figure>
-                              <img class="img-circle img-responsive" alt="" src="http://placehold.it/300x300">
+                                <% if (pictures.length === 0) { %>
+                                <img class="img-circle img-responsive" alt="" src="">
+                                <% } else { %>
+                                <img class="img-circle img-responsive" alt="" src="<%= pictures[0].pic_path %>">
+                                <% } %>
                            </figure>
                            <div class="row">
                               <div class="col-xs-12 social-btns">
@@ -82,10 +86,10 @@
                         <div class="col-xs-12 col-sm-8">
                            <ul class="list-group">
                               <li class="list-group-item"><%= currentUserInfo.name %></li>
-                              <li class="list-group-item">Model</li>
-                              <li class="list-group-item">Wella</li>
-                              <li class="list-group-item"><i class="fa fa-phone"></i>Member since <%= currentUserInfo.createdAt %></li>
-                              <li class="list-group-item"><i class="fa fa-envelope"></i> <%= currentUserInfo.email %></li>
+                              <li class="list-group-item">Hola</li>
+                              <li class="list-group-item">YouTube Link</li>
+                              <li class="list-group-item"><i class="glyphicon glyphicon-user"></i>      Member since <%= currentUserInfo.createdAt %></li>
+                              <li class="list-group-item"><i class="fa fa-envelope"></i>     <%= currentUserInfo.email %></li>
                            </ul>
                         </div>
                      </div>
